Groupe presentation done

--- a/html/groupe.component.html
+++ b/html/groupe.component.html
@@ -31,7 +31,7 @@
           <p class="title">Bassiste &amp; Trésorier</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
           <p>baptiste.lefort@essec.edu</p>
-          <p><button class="button">Contact</button></p>
+          <a href="mailto:jamsince1980@gmail.com?cc=other@domain.com&bcc=hidden@domain.com&subject=Enquiry%20regarding%20product%20#0022&body=I%20would%20like%20more%20information%20on%20product%20#0022">    <button class="button">Contact</button></a>
         </div>
       </div>
     </div>
@@ -44,7 +44,7 @@
           <p class="title">Saxophoniste</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
           <p>gabriel.gintz@essec.edu</p>
-          <p><button class="button">Contact</button></p>
+          <a href="mailto:jamsince1980@gmail.com?cc=other@domain.com&bcc=hidden@domain.com&subject=Enquiry%20regarding%20product%20#0022&body=I%20would%20like%20more%20information%20on%20product%20#0022">    <button class="button">Contact</button></a>
         </div>
       </div>
     </div>
@@ -57,7 +57,7 @@
           <p class="title">Batteur </p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
           <p>hugues.gallier@essec.edu </p>
-          <p><button class="button">Contact</button></p>
+          <a href="mailto:jamsince1980@gmail.com?cc=other@domain.com&bcc=hidden@domain.com&subject=Enquiry%20regarding%20product%20#0022&body=I%20would%20like%20more%20information%20on%20product%20#0022">    <button class="button">Contact</button></a>
         </div>
       </div>
     </div>
@@ -70,7 +70,7 @@
           <p class="title">Batteur </p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
           <p>Jeremy.Kulscar@essec.edu </p>
-          <p><button class="button">Contact</button></p>
+          <a href="mailto:jamsince1980@gmail.com?cc=other@domain.com&bcc=hidden@domain.com&subject=Enquiry%20regarding%20product%20#0022&body=I%20would%20like%20more%20information%20on%20product%20#0022">    <button class="button">Contact</button></a>
         </div>
       </div>
     </div>
@@ -83,11 +83,89 @@
           <p class="title">Batteur </p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
           <p>julien.lecanu@essec.edu </p>
-          <p><button class="button">Contact</button></p>
+          <a href="mailto:jamsince1980@gmail.com?cc=other@domain.com&bcc=hidden@domain.com&subject=Enquiry%20regarding%20product%20#0022&body=I%20would%20like%20more%20information%20on%20product%20#0022">    <button class="button">Contact</button></a>
         </div>
       </div>
     </div>
 
+   
+
+    <div class="column">
+      <div class="card">
+        <img src="/images/photos/Jammeux/Juliette%20Denoble%20Mayer%20Chanteuse.JPG" alt="John" style="width:60%">
+        <div class="container">
+          <h2>Juliette Denoble-Mayer</h2>
+          <p class="title">Chanteuse </p>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p>juliette.denoble-mayer@essec.edu </p>
+          <a href="mailto:jamsince1980@gmail.com?cc=other@domain.com&bcc=hidden@domain.com&subject=Enquiry%20regarding%20product%20#0022&body=I%20would%20like%20more%20information%20on%20product%20#0022">    <button class="button">Contact</button></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+        <img src="/images/photos/Jammeux/Lara%20Van%20Daalen%20Chanteuse.JPG" alt="John" style="width:60%">
+        <div class="container">
+          <h2>Lara Van Daalen</h2>
+          <p class="title">Chanteuse </p>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p>Lara.vandaalen@essec.edu </p>
+          <a href="mailto:jamsince1980@gmail.com?cc=other@domain.com&bcc=hidden@domain.com&subject=Enquiry%20regarding%20product%20#0022&body=I%20would%20like%20more%20information%20on%20product%20#0022">    <button class="button">Contact</button></a>
+        </div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="card">
+        <img src="/images/photos/Jammeux/Lotfi%20Ramdane%20Pianiste.JPG" alt="John" style="width:60%">
+        <div class="container">
+          <h2>Lotfi Ramdane</h2>
+          <p class="title">Pianiste </p>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p>lotfi.ramdane@essec.edu </p>
+          <a href="mailto:jamsince1980@gmail.com?cc=other@domain.com&bcc=hidden@domain.com&subject=Enquiry%20regarding%20product%20#0022&body=I%20would%20like%20more%20information%20on%20product%20#0022">    <button class="button">Contact</button></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+        <img src="/images/photos/Jammeux/Marie%20Colas%20Violoniste.JPG" alt="John" style="width:60%">
+        <div class="container">
+          <h2>Marie Colas</h2>
+          <p class="title">Violoniste </p>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p>marie.colas@essec.edu </p>
+          <a href="mailto:jamsince1980@gmail.com?cc=other@domain.com&bcc=hidden@domain.com&subject=Enquiry%20regarding%20product%20#0022&body=I%20would%20like%20more%20information%20on%20product%20#0022">    <button class="button">Contact</button></a>
+        </div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="card">
+        <img src="/images/photos/Jammeux/Philippine%20Gié%20Chanteuse%20Secrétaire%20Générale.JPG" alt="John" style="width:60%">
+        <div class="container">
+          <h2>Philippine Gié</h2>
+          <p class="title">Chanteuse </p>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p>philippine.gié@essec.edu </p>
+          <a href="mailto:jamsince1980@gmail.com?cc=other@domain.com&bcc=hidden@domain.com&subject=Enquiry%20regarding%20product%20#0022&body=I%20would%20like%20more%20information%20on%20product%20#0022">    <button class="button">Contact</button></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+        <img src="/images/photos/Jammeux/Thibaut%20Bertoux%20Flutiste.JPG" alt="John" style="width:60%">
+        <div class="container">
+          <h2>Thibaut Bertoux</h2>
+          <p class="title">Flutiste </p>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p>thibaut.bertoux@essec.edu </p>
+          <a href="mailto:jamsince1980@gmail.com?cc=other@domain.com&bcc=hidden@domain.com&subject=Enquiry%20regarding%20product%20#0022&body=I%20would%20like%20more%20information%20on%20product%20#0022">    <button class="button">Contact</button></a>
+        </div>
+      </div>
+    </div>
+       
   </div>
 
   
