Le groupe finished

--- a/html/groupe.component.html
+++ b/html/groupe.component.html
@@ -9,6 +9,7 @@
 <div class="content-wrapper" style="align-content: center">
   <br>
   <div class="margin"></div>
+
   <div class="row">
     <div class="column">
       <div class="card">
@@ -35,7 +36,6 @@
         </div>
       </div>
     </div>
-
     <div class="column">
       <div class="card">
         <img src="/images/photos/Jammeux/Gabriel%20Gintz%20Saxophoniste.JPG" alt="John" style="width:60%">
@@ -48,7 +48,9 @@
         </div>
       </div>
     </div>
+  </div>
 
+  <div class="row">
     <div class="column">
       <div class="card">
         <img src="/images/photos/Jammeux/Hugues%20Gallier%20Batteur.JPG" alt="John" style="width:60%">
@@ -61,7 +63,6 @@
         </div>
       </div>
     </div>
-
     <div class="column">
       <div class="card">
         <img src="/images/photos/Jammeux/Jeremy%20Kulscar%20Guitariste.JPG" alt="John" style="width:60%">
@@ -87,9 +88,8 @@
         </div>
       </div>
     </div>
-
-   
-
+  </div>
+  <div class="row">
     <div class="column">
       <div class="card">
         <img src="/images/photos/Jammeux/Juliette%20Denoble%20Mayer%20Chanteuse.JPG" alt="John" style="width:60%">
@@ -115,6 +115,7 @@
         </div>
       </div>
     </div>
+
     <div class="column">
       <div class="card">
         <img src="/images/photos/Jammeux/Lotfi%20Ramdane%20Pianiste.JPG" alt="John" style="width:60%">
@@ -127,7 +128,8 @@
         </div>
       </div>
     </div>
-
+  </div>
+  <div class="row">
     <div class="column">
       <div class="card">
         <img src="/images/photos/Jammeux/Marie%20Colas%20Violoniste.JPG" alt="John" style="width:60%">
@@ -140,6 +142,7 @@
         </div>
       </div>
     </div>
+
     <div class="column">
       <div class="card">
         <img src="/images/photos/Jammeux/Philippine%20Gié%20Chanteuse%20Secrétaire%20Générale.JPG" alt="John" style="width:60%">
@@ -251,4 +254,3 @@
   </div>
 -->
   <div class="margin"></div>
-</div>
