--- a/css/groupe.component.css
+++ b/css/groupe.component.css
@@ -1,17 +1,43 @@
-div#slider figure img { width: 20%; height: auto; float: left; }
+div#slider figure img {
+  width: 20%;
+  height: auto;
+  float: left;
+}
 
-div#slider { width: 80%; max-width: 700px; overflow: hidden }
+div#slider {
+  width: 80%;
+  max-width: 700px;
+  overflow: hidden
+}
 
 @keyframes slidy {
-  0% { left: 0%; }
-  20% { left: 0%; }
-  25% { left: -100%; }
-  45% { left: -100%; }
-  50% { left: -200%; }
-  70% { left: -200%; }
-  75% { left: -300%; }
-  95% { left: -300%; }
-  100% { left: -400%; }
+  0% {
+    left: 0%;
+  }
+  20% {
+    left: 0%;
+  }
+  25% {
+    left: -100%;
+  }
+  45% {
+    left: -100%;
+  }
+  50% {
+    left: -200%;
+  }
+  70% {
+    left: -200%;
+  }
+  75% {
+    left: -300%;
+  }
+  95% {
+    left: -300%;
+  }
+  100% {
+    left: -400%;
+  }
 }
 
 div#slider figure {
@@ -32,8 +58,9 @@ div#slider figure {
   width: 100%;
   text-align: left;
   border-collapse: collapse;
-  
+
 }
+
 #tableau th {
   font-size: 13px;
   font-weight: normal;
@@ -42,8 +69,9 @@ div#slider figure {
   border-top: 2px solid #d3ddff;
   border-bottom: 1px solid #fff;
   color: #039;
-  
+
 }
+
 #tableau td {
   padding: 8px;
   border-bottom: 1px solid #fff;
@@ -51,27 +79,31 @@ div#slider figure {
   border-top: 1px solid #fff;
   background: #e8edff url('http://1.bp.blogspot.com/_xDpoN6UfFFY/S-J2f5yBC3I/AAAAAAAACbY/zWXYXsR-w5E/s1600/gradback.png') repeat-x;
 }
+
 #tableau tfoot tr td {
   background: #e8edff;
   font-size: 16px;
   color: #99c;
-  text-align:center;
+  text-align: center;
 }
+
 #tableau tbody tr:hover td {
   background: #d0dafd url('http://4.bp.blogspot.com/_xDpoN6UfFFY/S-J2hsztUzI/AAAAAAAACbo/ztV1CK0RUrE/s1600/gradhover.png') repeat-x;
   color: #339;
 }
+
 #tableau a:hover {
-  text-decoration:underline;
+  text-decoration: underline;
 }
 
-#monTrombi{
+#monTrombi {
   width: 1000px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
 }
-.img_left{
+
+.img_left {
   display: block;
   width: 150px;
   height: auto;
@@ -80,17 +112,18 @@ div#slider figure {
   float: left;
 }
 
+.row {
+  text-align: center;
+}
+
 /* Three columns side by side */
 .column {
-  float: left;
-  position:relative;
- left: 255px;
- bottom: 180px;
+  text-align: center;
+  position: relative;
+  bottom: 180px;
   top: 30px;
-  width: 33.3%;
   margin-bottom: 16px;
   padding: 0 8px 30px 8px;
-  
 }
 
 /* Display the columns below each other instead of side by side on small screens */
@@ -104,7 +137,7 @@ div#slider figure {
 /* Add some shadows to create a card effect */
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  
+
 }
 
 /* Some left and right padding inside the container */
