--- a/html/groupe.component.html
+++ b/html/groupe.component.html
@@ -17,7 +17,6 @@
         <div class="container">
           <h2>Emilie Taieb</h2>
           <p class="title">Chanteuse &amp; Rock</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
           <p>emilie.taieb@essec.edu</p>
       <a href="mailto:jamsince1980@gmail.com?cc=other@domain.com&bcc=hidden@domain.com&subject=Enquiry%20regarding%20product%20#0022&body=I%20would%20like%20more%20information%20on%20product%20#0022">    <button class="button">Contact</button></a>
         </div>
@@ -89,9 +88,9 @@
       <div class="card">
         <img src="/images/photos/Jammeux/Juliette%20Denoble%20Mayer%20Chanteuse.JPG" alt="John" style="width:60%">
         <div class="container">
-          <h2>Juliette Denoble-Mayer</h2>
+          <h2>Juliette Denoble</h2>
           <p class="title">Chanteuse </p>
-          <p>juliette.denoble-mayer@essec.edu </p>
+          <p>b00703268@essec.edu </p>
           <a href="mailto:jamsince1980@gmail.com?cc=other@domain.com&bcc=hidden@domain.com&subject=Enquiry%20regarding%20product%20#0022&body=I%20would%20like%20more%20information%20on%20product%20#0022">    <button class="button">Contact</button></a>
         </div>
       </div>
