--- a/html/infos.component.html
+++ b/html/infos.component.html
@@ -10,6 +10,10 @@
     <div class="margin"></div>
     <div class="content">
         <p>{{content}}</p>
+        <div class="content">
+            <p>{{content2}}</p>
+            <div class="content">
+                <p>{{content3}}</p>
     </div>
     <div class="margin"></div>
 </div>
