--- a/html/galerie.component.html
+++ b/html/galerie.component.html
@@ -36,8 +36,8 @@
     <div class="row tm-services-row-2">
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 tm-services-col">
         <div class="tm-about-box-3 tm-services-box-3 tm-blue-bordered">
-          <h2 class="tm-services-title tm-blue-text">Concert Gala ESSEC Grande Ecole du BDE Pandora</h2>
-          <p class="tm-about-description-3"><em>Pavillon Royal, 4 mai 2018</em></p>
+          <h2 class="tm-services-title tm-blue-text">Concert de l'Administration de l'Essec</h2>
+          <p class="tm-about-description-3"><em>Théatre 95, 19 janvier 2018</em></p>
         </div>
       </div>
     </div>
@@ -47,13 +47,13 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 tm-services-col-left">
 
         <div>
-          <img src="/images/photos/image4.jpg" alt="Image"
+          <img src="/images/photos/Concert de l'Administration/DSC_0267.JPG" alt="Image"
                class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
-          <img src="/images/photos/image4.jpg" alt="Image"
+          <img src="/images/photos/Concert de l'Administration/DSC_0272.JPG" alt="Image"
                class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
-          <img src="/images/photos/image4.jpg" alt="Image"
+          <img src="/images/photos/Concert de l'Administration/DSC_0272.JPG" alt="Image"
                class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
-          <img src="/images/photos/image4.jpg" alt="Image"
+          <img src="/images/photos/Concert de l'Administration/DSC_0305.JPG" alt="Image"
                class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
         </div>
 
@@ -76,13 +76,67 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 tm-services-col-left">
 
         <div>
-          <img src="/images/photos/image4.jpg" alt="Image"
+          <img src="/images/photos/Concours tremplin Inter-école/IMG_3124.JPG" alt="Image"
                class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
-          <img src="/images/photos/image4.jpg" alt="Image"
+          <img src="/images/photos/Concours tremplin Inter-école/IMG_3151.JPG" alt="Image"
                class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
-          <img src="/images/photos/image4.jpg" alt="Image"
+        </div>
+
+      </div>
+    </div>
+
+     <!-- Concert Diner de Noel -->
+
+     <div class="row tm-services-row-2">
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 tm-services-col">
+        <div class="tm-about-box-3 tm-services-box-3 tm-blue-bordered">
+          <h2 class="tm-services-title tm-blue-text">Concert Diner de Noël</h2>
+          <p class="tm-about-description-3"><em>Haut de Cafet, 5 février 2018</em></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row tm-services-row">
+
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 tm-services-col-left">
+
+        <div>
+          <img src="/images/photos/Concert Diner de Noël/DSC_0041.JPG" alt="Image"
                class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
-          <img src="/images/photos/image4.jpg" alt="Image"
+          <img src="/images/photos/Concert Diner de Noël/DSC_0053.JPG" alt="Image"
+               class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
+          <img src="/images/photos/Concert Diner de Noël/DSC_0057.JPG" alt="Image"
+               class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
+          <img src="/images/photos/Concert Diner de Noël/DSC_0076.JPG" alt="Image"
+               class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
+        </div>
+
+      </div>
+    </div>
+
+     <!-- Concert de Rock Symphonique de l'Essec -->
+
+     <div class="row tm-services-row-2">
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 tm-services-col">
+        <div class="tm-about-box-3 tm-services-box-3 tm-blue-bordered">
+          <h2 class="tm-services-title tm-blue-text">Concert de Rock Symphonique de l'Essec</h2>
+          <p class="tm-about-description-3"><em>Grand Amphithéatre de l'Essec, 23 mai 2018</em></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row tm-services-row">
+
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 tm-services-col-left">
+
+        <div>
+          <img src="/images/photos/Concert de Rock Symphonique de l'ESSEC/DSC_0040.JPG" alt="Image"
+               class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
+          <img src="/images/photos/Concert de Rock Symphonique de l'ESSEC/DSC_0054.JPG" alt="Image"
+               class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
+          <img src="/images/photos/Concert de Rock Symphonique de l'ESSEC/DSC_0062.JPG" alt="Image"
+               class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
+          <img src="/images/photos/Concert de Rock Symphonique de l'ESSEC/DSC_0091.JPG" alt="Image"
                class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
         </div>
 
